fixed main search box font size jumping

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -1044,6 +1044,7 @@ textarea
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25) inset
     z-index: 11
     position: relative
+    font-size: 18px
     &:focus, &.loading
       font-size: 18px
       background: #fff
